<resources>
    <string name="app_name">Мой бюджет</string>
    <string name="splash_tagline">Ваши финансы — под контролем</string>
    <string name="action_settings">Settings</string>
    <string name="role_viewer">Наблюдатель</string>
    <string name="role_editor">Редактор</string>
    <string name="role_admin">Владелец</string>
    <string name="select_role">Выберите роль из списка</string>
    <string name="error_select_valid_role">Выберите корректную роль</string>
    <string name="stub_change_username">Мое новое имя</string>
    <string-array name="roles_list">
        <item>Наблюдатель</item>
        <item>Редактор</item>
    </string-array>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="network_status_icon">Иконка статуса сети</string>
    <string name="no_internet_connection">Нет подключения к Интернету</string>
    <string name="connected">Подключено к Интернету</string>
    <string name="show_more">Показать больше</string>
    <string name="show_less">Показать меньше</string>
    <string name="save">Сохранить</string>
    <string name="add">Добавить</string>
    <string name="delete">Удалить</string>
    <string name="filters">Фильтры</string>
    <string name="select_date">Выберите дату</string>
    <string name="verification_code_sent_success">Код отправлен на почту. Введите код в показанном окне</string>
    <string name="change_password_title">Сменить пароль</string>
    <string name="email_hint">Email</string>
    <string name="current_password_hint">Текущий пароль</string>
    <string name="new_password_hint">Новый пароль</string>
    <string name="change_password_button">Сменить пароль</string>
    <string name="login_button">Войти</string>
    <string name="password_hint">Пароль</string>
    <string name="register_prompt">Нет аккаунта? Зарегистрируйтесь</string>
    <string name="forgot_password_prompt">Забыли пароль?</string>
    <string name="register_title">Регистрация</string>
    <string name="name_hint">Имя</string>
    <string name="confirm_password_hint">Подтвердите пароль</string>
    <string name="policy_agreement">Я согласен с политикой конфиденциальности</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="already_registered">Уже зарегистрированы?</string>
    <string name="reset_password_title">Сброс пароля</string>
    <string name="reset_password_button">Восстановить пароль</string>
    <string name="error_empty_email">Email не может быть пустым</string>
    <string name="error_empty_password">Пароль не может быть пустым</string>
    <string name="error_short_password">Пароль должен содержать минимум 6 символов</string>
    <string name="error_invalid_email">Введите корректный email</string>
    <string name="error_select_role">Выберите роль участника</string>
    <string name="error_role_not_found">Указана несуществующая роль</string>
    <string name="error_loading_image">Ошибка загрузки изображения</string>
    <string name="error_loading_data">Ошибка загрузки данных</string>
    <string name="error_enter_name">Введите название</string>
    <string name="error_enter_valid_amount">Введите корректную сумму</string>
    <string name="error_enter_custom_category">Введите свою категорию</string>
    <string name="required_field">Обязательное поле</string>
    <string name="invitation_sent_success">Приглашение успешно отправлено</string>
    <string name="invitation_sent_error">%s</string>
    <string name="invitation_processing">Отправка приглашения…</string>
    <string name="add_participant_title">Добавить участника</string>
    <string name="participant_email_hint">Email участника</string>
    <string name="no_participants">Нет участников :(</string>
    <string name="role_hint">Роль участника</string>
    <string name="send_invitation">Отправить приглашение</string>
    <string name="generate_qr">Сгенерировать QR-код</string>
    <string name="share_qr">Поделиться QR</string>
    <string name="invite_by_email">По Email</string>
    <string name="invite_by_qr">Через QR-код</string>
    <string name="qr_code">QR-код приглашения</string>
    <string name="invite_code_label">Код приглашения %1$s</string>
    <string name="invite_code">Код приглашения</string>
    <string name="copied_to_clipboard">Скопировано в буфер обмена</string>
    <string name="dialog_change_username_title">Сменить имя пользователя</string>
    <string name="change">Сменить</string>
    <string name="error_empty_username">Имя не может быть пустым</string>
    <string name="error_username_too_short">Имя должно быть не менее 4 символов</string>
    <string name="debug_panel_title">Панель отладки</string>
    <string name="debug_send_test_notification">Отправить тестовое уведомление</string>
    <string name="debug_change_host">Смена окружения</string>
    <string name="error_empty_host">Адрес хоста не может быть пустым</string>
    <string name="error_invalid_host">Ошибка в адресе хоста</string>
    <string name="debug_host_changed">Хост поменят «%1$s». Перезапустите приложение</string>
    <string name="current_host_label">Текущий host: %1$s</string>
    <string name="saving">Сохраняю...</string>
    <string name="edit_profile">Редактировать профиль</string>
    <string name="delete_project">Удалить проект</string>
    <string name="project">Проект</string>
    <string name="delete_project_confirmation">Вы уверены, что хотите удалить этот проект?</string>
    <string name="project_archived">Проект архивирован</string>
    <string name="project_unarchived">Проект разархивирован</string>
    <string name="financial_info_title">Финансовая информация</string>
    <string name="project_budget">Бюджет</string>
    <string name="project_spent">Потрачено</string>
    <string name="project_remaining">Осталось</string>
    <string name="project_description_title">Описание проекта</string>
    <string name="project_participants">Участники проекта</string>
    <string name="total_amount_format">Всего потрачено: </string>
    <string name="budget_progress_tooltip">Бюджет: %1$s\nПотрачено: %2$s\nОсталось: %3$s</string>
    <string name="total_amount">Общая сумма</string>
    <string name="confirm_delete_participant_title">Удалить участника</string>
    <string name="confirm_delete_participant_message">
        Вы уверены, что хотите удалить участника %1$s?
    </string>
    <string name="report_actions_title">Что вы хотите сделать с отчётом?</string>
    <string name="report_action_save_as">Сохранить как…</string>
    <string name="report_action_share">Поделиться</string>
    <string name="overview_analytics">Общая аналитика</string>
    <string name="project_analytics">Аналитика проекта</string>
    <string name="transaction_section_name">Транзакции</string>
    <string name="no_transactions">Нет транзакций</string>
    <string name="no_transactions_for_filter">Нет транзакций, соответствующих фильтру</string>
    <string name="empty_transactions_desc">Пусто</string>
    <string name="all">Все</string>
    <string name="other">Другое</string>
    <string name="project_transaction_filters">Фильтры</string>
    <string name="confirm_delete_transaction_title">Удаление транзакции</string>
    <string name="confirm_delete_notification_title">Удаление уведомления</string>
    <string name="confirm_delete_transaction_message">Вы уверены, что хотите удалить транзакцию?</string>
    <string name="confirm_delete_notification_message">Вы уверены, что хотите удалить уведомление?</string>
    <string name="sample_date">01.12.2024</string>
    <string name="sample_amount">−1 000 ₽</string>
    <string name="sample_user">Иван Иванов</string>
    <string name="sample_transaction_name">Моя транзакция</string>
    <string name="sample_category">Моя категория</string>
    <string name="select_image_source">Выберите источник изображения</string>
    <string name="add_transaction">Добавить транзакцию</string>
    <string name="delete_transaction">Удалить транзакцию</string>
    <string name="delete_transaction_confirmation">Вы уверены, что хотите удалить эту транзакцию?</string>
    <string name="receipt_preview">Предпросмотр чека</string>
    <string name="recognized_amount_template">Распознанная сумма: %1$s</string>
    <string name="recognized_amount_not_found">Не смог распознать цену</string>
    <string name="image_saved_in_gallery">Изображение сохранено в галерею</string>
    <string name="permission_storage_required">
        Для этого действия необходимо разрешение на доступ к хранилищу
    </string>
    <string name="permission_required_title">Требуется разрешение</string>
    <string name="permission_storage_explanation">
        Для сохранения и отправки изображений необходимо разрешение на доступ к хранилищу
    </string>
    <string name="allow">Разрешить</string>
    <string name="error_time_in_future">Нельзя выбрать время в будущем</string>
    <string name="transaction_name">Название транзакции</string>
    <string name="transaction_amount">Сумма</string>
    <string name="transaction_date">Дата транзакции</string>
    <string name="transaction_title_your">Вы</string>
    <string name="income">Доход</string>
    <string name="expense">Расход</string>
    <string name="camera">Камера</string>
    <string name="gallery">Галерея</string>
    <string name="scan_receipt">Сканировать чек</string>
    <string name="view_receipt_title">Просмотр чека</string>
    <string name="transaction_category_icon">Иконка категории</string>
    <string name="transaction_category">Категория транзакции</string>
    <string name="custom_category">Другая категория</string>
    <string name="transaction_images_count">Количество прикреплённых изображений</string>
    <string name="share_image_title">Поделиться изображением</string>
    <string name="emoji_search">Поиск эмодзи...</string>
    <string name="app_settings">Настройки приложения</string>
    <string name="app_language">Язык приложения</string>
    <string name="select_language">Выберите язык</string>
    <string name="notifications">Уведомления</string>
    <string name="project_notifications">Уведомления проекта</string>
    <string name="no_notifications">Нет уведомлений :(</string>
    <string name="clear_filters">Очистить</string>
    <string name="apply_filters">Применить</string>
    <string name="min_amount">Мин. сумма</string>
    <string name="max_amount">Макс. сумма</string>
    <string name="min_amount_helper">Минимальная</string>
    <string name="max_amount_helper">Максимальная</string>
    <string name="sample_participant_name">Иван Иванов</string>
    <string name="sample_participant_email">iuturakulov@example.com</string>
    <string name="edit">Редактировать</string>
    <string name="role_member">Член команды</string>
    <string name="filter_project_owner">Фильтр проекта по владельцу</string>
    <string name="filter_project_budget_range">Фильтр проекта по бюджету</string>
    <string name="project_status_active">Активен</string>
    <string name="project_status_deleted">Удален</string>
    <string name="project_status_archived">Архивирован</string>
    <string name="project_status">Статус проекта</string>
    <string name="filter_project_category">Фильтр по категории проекта</string>
    <string name="menu_analytics">Аналитика</string>
    <string name="menu_project_to_participants">Участники</string>
    <string name="menu_project_to_archive">Архивировать</string>
    <string name="menu_project_to_unarchive">Разархивировать</string>
    <string name="close">Закрыть</string>
    <string name="period_label">Период</string>
    <string name="from_not_selected">С: не выбрано</string>
    <string name="to_not_selected">По: не выбрано</string>
    <string name="categories_label">Категории</string>
    <string name="granularity_label">Гранулярность</string>
</resources>