<?xml version="1.0" encoding="utf-8"?>
<menu  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Кнопка редактирования -->
    <item
        android:id="@+id/menuEdit"
        android:icon="@drawable/baseline_edit_note_24"
        android:title="@string/edit"
        app:showAsAction="ifRoom" />

    <group android:id="@+id/group_editor" >

        <!-- Кнопка удаления -->
        <item
            android:id="@+id/menuDelete"
            android:icon="@drawable/baseline_delete_forever_24"
            android:title="@string/delete"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/menuArchiveProject"
            android:icon="@drawable/baseline_archive_24"
            android:title="@string/menu_project_to_archive"
            android:visible="false"
            app:showAsAction="never" />

        <item
            android:id="@+id/menuUnarchiveProject"
            android:icon="@drawable/baseline_unarchive_24"
            android:title="@string/menu_project_to_unarchive"
            android:visible="false"
            app:showAsAction="never" />
    </group>

    <item
        android:id="@+id/menuParticipants"
        android:icon="@drawable/baseline_people_24"
        android:title="@string/menu_project_to_participants"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuAnalytics"
        android:icon="@drawable/outline_analytics_24"
        android:title="@string/menu_analytics"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuProjectNotifications"
        android:icon="@drawable/ic_notifications_24"
        android:title="@string/notifications"
        app:showAsAction="ifRoom" />

</menu>
