<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/period_label" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFromDate"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="13sp"
            android:layout_height="wrap_content"
            android:text="@string/from_not_selected"
            app:icon="@drawable/baseline_calendar_month_24"
            app:iconPadding="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnToDate"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_width="0dp"
            android:textSize="13sp"
            android:layout_height="wrap_content"
            android:text="@string/to_not_selected"
            app:icon="@drawable/baseline_calendar_month_24"
            app:iconPadding="8dp" />
    </LinearLayout>

    <TextView
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories_label" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupCats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="false"
        app:chipSpacingHorizontal="8dp"
        app:chipSpacingVertical="8dp"
        app:singleLine="false"/>

    <TextView
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/granularity_label" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilGranularity"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/acGranularity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
